master/weeglea/Deployement.yaml
apiVersion: apps/v1beta1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: weeglea-deployment
spec:
  selector:
    matchLabels:
      app: weeglea
  replicas: 5 # tells deployment to run 3 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: weeglea
    spec:
      containers:
        - name: weeglea
          image: cedcori/weeglea
          ports:
            - containerPort: 8080
              name: server
