master/weeglea/Deployement_jenkins.yaml
apiVersion: apps/v1beta1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: weegle-a
spec:
  selector:
    matchLabels:
      app: weegle-a
  replicas: 1 # tells deployment to run 3 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: weegle-a
    spec:
      containers:
        - name: weegle-a
          image: cedcori/weegle-a
          ports:
            - containerPort: 8080
              name: server
