master/weeglea/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weeglea
spec:
  ports:
    - port: 8080
      nodePort: 30001
  selector:
    app: weeglea
  type: NodePort
